--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,10 @@ table {
 
 /* CONTAINER */
 #container {
-	border: 5px solid red;
+	border: 15px solid red;
 	height: 960px;
 	width: 960px;
+	border-radius: 10px;
 	background: grey;
 	line-height: 0;
 }
@@ -61,9 +62,14 @@ table {
 
 .etchSquare {
 	display: inline-block;
-
-  background-color: black;
-	border: 1px solid white;
+  background-color: grey;
 
 	box-sizing: border-box;
+}
+.etchSquareDrawn {
+	display: inline-block;
+
+
+	box-sizing: border-box;
+	background-color: black;
 }
